--- a/app/src/main/res/layout/fragment_win.xml
+++ b/app/src/main/res/layout/fragment_win.xml
@@ -1,5 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
 <layout>
+    <data>
+<!--        <variable-->
+<!--            name="winModel"-->
+<!--            type="com.example.colorapp.fragments.winFragment" />-->
+    </data>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
@@ -13,7 +18,7 @@
         android:layout_height="wrap_content"
         android:textSize="30sp"
         android:gravity="center"
-        android:text="0" />
+        android:text="@{@string/format_count(0)}" />
     <com.google.android.material.button.MaterialButton
         android:text="Increment"
         android:id="@+id/incrementBtn"
